--- a/executor/package.json
+++ b/executor/package.json
@@ -13,5 +13,8 @@
     "dotenv": "^8.0.0",
     "mongoose": "^5.7.5",
     "web3": "^1.0.0-beta.55"
+  },
+  "devDependencies": {
+    "secure-env": "^1.2.0"
   }
 }
