target dockerfile in executer

--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -3,4 +3,5 @@ FROM node:alpine
 COPY ./package.json .
 RUN apk add --no-cache bash
 RUN /bin/bash -c "npm install" 
+WORKDIR /executor
 ENTRYPOINT ["node", "index.js"] 
