--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -1,6 +1,6 @@
 #executer: node run index.js
 FROM node:alpine 
-COPY ./executer/package.json ./executer
+COPY ./package.json .
 RUN apk add --no-cache bash
 WORKDIR /executor
 RUN /bin/bash -c "npm install" 
