--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -1,6 +1,6 @@
 #executer: node run index.js
 FROM node:alpine 
-WORKDIR /executor
+#:WORKDIR /executor
 COPY ./package.json .
 RUN apk add --no-cache bash
 RUN /bin/bash -c "npm install" 
