--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -1,7 +1,8 @@
 #executer: node run index.js
 FROM node:alpine 
 #:WORKDIR /executor
-COPY ./package.json .
 RUN apk add --no-cache bash
+RUN /bin/bash -c "pwd"
+COPY ./package.json .
 RUN /bin/bash -c "npm install" 
 ENTRYPOINT ["node", "index.js"] 
