--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -1,7 +1,7 @@
 #executer: node run index.js
 FROM node:alpine 
-#:WORKDIR /executor
 RUN apk add --no-cache bash
+WORKDIR /executor
 RUN /bin/bash -c "pwd"
 COPY ./package.json .
 RUN /bin/bash -c "npm install" 
