--- a/executor/package.json
+++ b/executor/package.json
@@ -15,6 +15,7 @@
     "web3": "^1.0.0-beta.55"
   },
   "devDependencies": {
+    "@truffle/hdwallet-provider": "^1.1.0",
     "secure-env": "^1.2.0"
   }
 }
