--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -4,5 +4,5 @@ RUN apk add --no-cache bash
 WORKDIR ./executor
 RUN /bin/bash -c "pwd"
 COPY ./package.json .
-RUN /bin/bash -c "npm install --silent" 
+RUN /bin/bash -c "npm install " #silent 
 ENTRYPOINT ["node", "index.js"] 
