--- a/executor/package.json
+++ b/executor/package.json
@@ -12,7 +12,8 @@
     "config": "^3.2.1",
     "dotenv": "^8.0.0",
     "mongoose": "^5.7.5",
-    "web3": "^1.0.0-beta.55"
+    "web3": "^1.0.0-beta.55",
+    "web3-providers-http": "^1.3.1"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.1.0",
